This is for my own render attempts

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-DATABASE_URL=graceShopper
+DATABASE_URL=postgres://stalefish_user:ghNHr5sQHvkXMYAihp7acjS9Ku9JWmAM@dpg-ce98oqhgp3jtsam8hqh0-a/stalefish
 JWT_SECRET=password
